# Off-Policy-Evaluation-with-causal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb  02_direct_method.ipynb  03_propensity_ips.ipynb  04_doubly_robust.ipynb  05_sensitivity.ipynb  06_statsbomb_pilot.ipynb  07_propensity_scores.ipynb  08_ips_snips.ipynb  09_overlap_ess.ipynb  10_bias_variance.ipynb  11_doubly_robust.ipynb  12_sensitivity_dowhy.ipynb  13_statsbomb_pilot.ipynb  14_synthetic_validation.ipynb
presentation/: OPE_Prezentacja_v2.pptx  PRESENTATION_GUIDE.md  SCENARIUSZ_PREZENTACJI.md
results/: FINAL_REPORT.md  presentation_week3_week4_pack.md  week3_week4_plan_i_opis.md
results/week11/: statsbomb_ope_results.csv
results/week12/: synthetic_validation.csv
results/week5/: pscores_bts.npy
results/week8/: benchmark_table.csv
src/: dataset.py  estimators.py  evaluation.py  propensity.py
