[project]
name = "off-policy-evaluation-with-causal"
version = "0.1.0"
description = "Off-Policy Evaluation z korekcja kauzalna"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "obp",
    "econml>=0.14.0",
    "dowhy",
    "xgboost",
    "shap",
    "statsbombpy",
    "scikit-learn",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
